# your-bunny-wrought

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
but/: app.py  args.py  argtypes.py  cli_modules.py  lazy.py  singleton.py
but/binaries/: README.md
but/html/: __init__.py  parser.py
but/http/: server.py  useragents.json
but/scripts/: batch.py  echo.py  fetch_hls.py  version.py
but/template/: render.py
but/test/: test_ansi.py  test_html.py  test_lazy.py
but/test/files/: git_ansi.txt  git_plain.txt
yourbunnywrought/: app.py  args.py  argtypes.py  cli_modules.py  store.py
yourbunnywrought/archive/: __init__.py  asar.py
yourbunnywrought/binaries/: README.md  __init__.py
yourbunnywrought/http/: __init__.py  server.py  update.py  update_useragents.py  useragent.py  useragents.json
yourbunnywrought/scripts/: __init__.py  batch.py
yourbunnywrought/template/: __init__.py  render.py
yourbunnywrought/test/: test_asar.py  test_singleton.py  test_template.py
yourbunnywrought/watch/: watch_files.py
