[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "but"
requires-python = ">=3.12"
dynamic = ["version"]

[project.scripts]
but = "yourbunnywrought.app:run"

[tool.setuptools.dynamic]
version = { attr = "yourbunnywrought.VERSION" }

[tool.setuptools.packages.find]
include = ["yourbunnywrought*"]

[tool.black]
line-length = 119

[tool.ruff]
ignore = ["E402"]
line-length = 119
