[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "but"
description = "I tried to think of a clever name, but"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dynamic = ["version", "dependencies"]

[project.scripts]
but = "but.app:main"

[tool.setuptools.dynamic]
version = { attr = "but.VERSION" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
include = ["but*"]

[tool.setuptools.package-data]
"but.binaries.linux_x86_64" = ["*.xz"]
"but.binaries.macos_arm64" = ["*.xz"]
"but.binaries.windows_amd64" = ["*.xz"]
"but.http" = ["useragents.json"]

[tool.black]
line-length = 119

[tool.ruff]
ignore = ["E402"]
line-length = 119
